--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -1,8 +1,8 @@
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-T0BGMBMH1Q"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-221756140-2"></script>
 <script>
 	window.dataLayer = window.dataLayer || [];
 	function gtag(){dataLayer.push(arguments);}
 	gtag('js', new Date());
-	gtag('config', 'G-T0BGMBMH1Q');
+	gtag('config', 'UA-221756140-2');
 </script>
