2022-11-30: added info to template.html in _layouts

--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -1,5 +1,27 @@
 {% for page in site.pages %}
-    <a href=/>RBF-Shadowhunter Home Page</a>
+	<a href=/>Hamilton Bonds Home Page</a>
+
+	<nav>
+		<ol>
+			<li><a href="#Resume">Resume</a></li>
+			<li><a href="#Quick Stats">Quick Stats</a></li>
+			<li><a href="#Capture-the-Flag (CTF) Competitions">Capture-the-Flag (CTF) Competitions</a></li>
+			<li><a href="#Proofs of Concept">Proofs of Concept</a></li>
+			<li><a href="#Creations">Creations</a></li>
+			<li><a href="#Endorsements">Endorsements</a></li>
+			<li><a href="#Achievements">Achievements</a></li>
+		</ol>
+	</nav>
+	<body>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-221756140-2"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			gtag('config', 'UA-221756140-2');
+		</script>
+	</body>
 {% endfor %}
 
 {{ content }}
