--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -1,28 +1,5 @@
 {% for page in site.pages %}
-	<a href=/>Hamilton Bonds Home Page</a>
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-		<link rel="stylesheet" href="./assets/css/main.css">
-
-		<script src="https://kit.fontawesome.com/1c3b2e895a.js" crossorigin="anonymous"></script>
-		<link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/scale.css" />
-		<link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/scale.css" />
-		<link rel="icon" href="/assets/Portfolio Icon.jfif">
-	</head>
-	<nav>
-		<ol>
-			<li><a href="#Resume">Resume</a></li>
-			<li><a href="#Quick Stats">Quick Stats</a></li>
-			<li><a href="#Capture-the-Flag (CTF) Competitions">Capture-the-Flag (CTF) Competitions</a></li>
-			<li><a href="#Proofs of Concept">Proofs of Concept</a></li>
-			<li><a href="#Creations">Creations</a></li>
-			<li><a href="#Endorsements">Endorsements</a></li>
-			<li><a href="#Achievements">Achievements</a></li>
-		</ol>
-	</nav>
+	{% include navigation.html}
 	<body>
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-221756140-2"></script>
