2022-11-30: fixed includes call in template.

--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -1,5 +1,5 @@
 {% for page in site.pages %}
-	{% include navigation.html}
+	{% include navigation.html %}
 	<body>
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-221756140-2"></script>
